<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidMapsV2Test</string>
    <string name="welcomMsg">Hello WiZard Welcome ;-)</string>
    <string name="Alert_ttl_GPS_not_enabled">Tablet Settings</string>
    <string name="Alert_msg_GPS_not_enabled">GPS location provider is not enabled! \n Please enable GPS satellites</string>

    <string name="menu_map_normal">normal</string>
    <string name="menu_map_satellite">satellite</string>
    <string name="menu_map_hybrid">hybrid</string>
    <string name="menu_map_terrain">terrain</string>
    <string name="menu_map_none">none</string>

    <string name="action_bar_info">Info</string>
    <string name="action_bar_open">Open</string>
    <string name="action_bar_save">Save</string>
    <string name="action_bar_map">Map Type</string>
    <string name="action_bar_undo">Undo</string>
    <string name="action_bar_redo">Redo</string>
    <string name="action_bar_measurementPoint">Measurement</string>
    <string name="action_bar_selection_mode">Select</string>
    <string name="action_bar_addLayer">Add Layer</string>
    <string name="action_bar_drawLine">Draw Line</string>
    <string name="action_bar_drawArc">Draw Arc</string>
    <string name="action_bar_take_pic">Take Photo</string>
    <string name="action_bar_text">Text</string>
    <string name="action_bar_actionConfirm">OK</string>
    <string name="action_bar_actionCancel">Cancel</string>
    <string name="action_bar_delete">Delete</string>

    <string-array name="maptype_string_array">
        <item>none</item>       //0x00
        <item>normal</item>     //0x01
        <item>satellite</item>  //0x02
        <item>terrain</item>    //0x03
        <item>hybrid</item>     //0x04
    </string-array>

    <string name="dlgfrag_alsd_layername">Layer Name:</string>
    <string name="dlgfrag_alsd_namehint">Enter name here...</string>
    <string name="dlgfrag_alsd_linwidth">Line Width:</string>
    <string name="dlgfrag_alsd_color">Color:</string>
    <string name="dlgfrag_alsd_apply">Apply</string>
    <string name="dlgfrag_alsd_cancel">Cancel</string>

    <string name="master_data_dir">measurement_data</string>
    <string name="file_extension">.txt</string>

    <string name="dlgfrag_savetofile_title">Save Current Project</string>
    <string name="dlgfrag_filename">File Name:</string>
    <string name="dlgfrag_savetofile_default_filename">project name</string>
    <string name="dlgfrag_hint_filename">file name...</string>
    <string name="dlgfrag_button_save">Save</string>
    <string name="dlgfrag_button_cancel">Cancel</string>

    <string name="dlgfrag_addtext_label">User Comment: </string>
    <string name="dlgfrag_addtext_button_save">Save</string>
    <string name="dlgfrag_addtext_button_cancel">Cancel</string>
    <string name="dlgfrag_addtext_title">Add/Change Comments</string>
    <string name="dlgfrag_addtext_hint">comment...</string>

    <string name="dlgfrag_openfile_title">Open a file:</string>
    <string name="textview_dlgfrag_openfile_path">path</string>
    <string name="button_dlgfrag_openfile_open">open</string>
    <string name="button_dlgfrag_openfile_cancel">cancel</string>

    <string name="marker_snippet_selected">Selected</string>

    <string name="currentPositionMarkerTitle">Current Position</string>


</resources>
