<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
            android:id="@+id/actionBar_info"
            android:icon="@drawable/ic_information"
            android:showAsAction="always"
            android:title="@string/action_bar_info"/>

    <item
            android:id="@+id/actionBar_openfile"
            android:icon="@drawable/ic_collections_collection"
            android:showAsAction="always"
            android:title="@string/action_bar_open" />

    <item
            android:id="@+id/actionBar_saveToFile"
            android:icon="@drawable/ic_content_save"
            android:showAsAction="always"
            android:title="@string/action_bar_save" />

    <item
            android:id="@+id/actionBar_maptype"
            android:icon="@drawable/ic_location_map"
            android:showAsAction="always"
            android:title="@string/action_bar_map"/>

    <item
            android:id="@+id/actionBar_undo"
            android:icon="@drawable/ic_content_undo"
            android:showAsAction="always"
            android:title="@string/action_bar_undo" />

    <item
            android:id="@+id/actionBar_redo"
            android:icon="@drawable/ic_content_redo"
            android:showAsAction="always"
            android:title="@string/action_bar_redo" />

    <item
            android:id="@+id/actionBar_measurementPoint"
            android:icon="@drawable/ic_device_access_location_searching"
            android:showAsAction="always"
            android:title="@string/action_bar_measurementPoint"/>

    <item
            android:id="@+id/actionBar_selectionMode"
            android:icon="@drawable/ic_selection_mode"
            android:showAsAction="always"
            android:title="@string/action_bar_selection_mode"/>

    <item
            android:id="@+id/actionBar_addLayer"
            android:icon="@drawable/ic_add_layer"
            android:showAsAction="always"
            android:title="@string/action_bar_addLayer" />

    <item
            android:id="@+id/actionBar_drawLine"
            android:icon="@drawable/ic_draw_line"
            android:showAsAction="always"
            android:title="@string/action_bar_drawLine" />

    <item
            android:id="@+id/actionBar_drawArc"
            android:icon="@drawable/ic_actionbar_draw_arc"
            android:showAsAction="always"
            android:title="@string/action_bar_drawArc"/>

    <item
            android:id="@+id/actionBar_takePic"
            android:icon="@drawable/ic_actionbar_device_access_camera"
            android:showAsAction="always"
            android:title="@string/action_bar_take_pic"/>

    <item
            android:id="@+id/actionBar_actionConfirm"
            android:icon="@drawable/ic_confirm_action"
            android:showAsAction="always"
            android:title="@string/action_bar_actionConfirm" />

    <item
            android:id="@+id/actionBar_actionCancel"
            android:icon="@drawable/ic_cancel_action"
            android:showAsAction="always"
            android:title="@string/action_bar_actionCancel" />

    <item
            android:id="@+id/actionBar_delete"
            android:icon="@drawable/ic_content_discard"
            android:showAsAction="always"
            android:title="@string/action_bar_delete" />

</menu>