<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlgfrag_alsd_layername"
                android:id="@+id/textView_layer_name"
                android:enabled="true"
                android:gravity="center_vertical|left"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_layer_name"
                android:layout_marginLeft="5dp"
                android:gravity="fill_horizontal|center_vertical"
                android:inputType="textShortMessage|text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlgfrag_alsd_color"
                android:id="@+id/textView_color"
                android:gravity="center_vertical|left"
                android:singleLine="true"/>
    </LinearLayout>

    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal">

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                >

            <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/button_azure"
                    android:background="@color/azure"
                    android:clickable="true"
                    android:layout_margin="5dp"
                    />

            <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/button_blue"
                    android:background="@color/blue"
                    android:layout_margin="5dp"
                    />

            <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/button_cyan"
                    android:background="@color/cyan"
                    android:layout_margin="5dp"
                    />

            <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/button_green"
                    android:background="@color/green"
                    android:layout_margin="5dp"
                    />

            <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/button_magenta"
                    android:background="@color/magenta"
                    android:layout_margin="5dp"
                    />
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal">

            <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/button_orange"
                    android:background="@color/orange"
                    android:layout_margin="5dp"/>

            <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/button_red"
                    android:background="@color/red"
                    android:layout_margin="5dp"/>

            <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/button_rose"
                    android:background="@color/rose"
                    android:layout_margin="5dp"/>

            <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/button_violet"
                    android:background="@color/violet"
                    android:layout_margin="5dp"/>

            <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/button_yellow"
                    android:background="@color/yellow"
                    android:layout_margin="5dp"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlgfrag_alsd_linwidth"
                android:id="@+id/textView_line_width"
                android:gravity="center_vertical|left"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_lineWidth_value"
                android:layout_marginLeft="0dp"
                android:gravity="center_vertical|center_horizontal"
                android:numeric="integer"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar_line_width"
                android:clickable="false"
                android:max="25"
                android:layout_gravity="start"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <ImageView android:id="@+id/ImageView_line_width"
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:background="@android:color/transparent"
                   android:layout_marginLeft="15dp"
                   android:layout_marginRight="15dp"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlgfrag_alsd_apply"
                android:id="@+id/button_apply_layer_settings"
                android:gravity="center_vertical|center_horizontal"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlgfrag_alsd_cancel"
                android:id="@+id/button_cancel_layer_settings"/>
    </LinearLayout>

    <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    </GridLayout>

</LinearLayout>